--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: ruby
+cache: bundler
 rvm:
+- 2.1.3
 - jruby
-- 2.0.0
-- 1.9.3
 notifications:
   email: false
-  hipchat:
-    rooms:
-      secure: WhPGqnsNAVchiJz/rmmIPIFHXI7NVd+k/zClVhtgyoPEdebFYFgOCEIGbE/53IVymVeXFFBeJUVQg1Um4AVsZzVpS5sC6ABWw7rH5PZQZ7k177ZmuhbIAVYLLXcX0OmolgsATvGejifVj5i/Kld46kRx3JDlWL/mA465Kso7a/k=
+  slack:
+    secure: Bx6zevwORhsDePzVk+QWDta7z9DWsZRnSrpPy/JKmkO5XbSuJqmkZX5NyJjG0skaKmylb2Y5CmPgpKyg3vlr09e7KSQd3fzNvgWWtoKtrV9TuSaJXPcheT50q+CtkaW2eqWpALMmbIyiRFu08TVyYW4HFFsy+E74Zxyeswpimfs=
